fix: txt align center

--- a/global.scss
+++ b/global.scss
@@ -94,6 +94,10 @@ a {
   align-items: end;
 }
 
+.tx-center {
+  text-align: center;
+}
+
 .margin-t {
   margin-top: 8rem;
 }
